# telemetry-logger

./: .gitignore  LICENSE  README.md  pyproject.toml
telemetry_logger/: __init__.py  cli.py  core.py
tests/: test_core.py
